fixing messages layout issue with sorting by message creation time

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -46,7 +46,7 @@
 
     .chat__box {
         height: 87vh;
-        padding: 1rem 2rem;
+        padding: 1rem 1rem;
         background-color: #333;
         display: flex;
         flex-direction: column;
@@ -82,7 +82,7 @@
 
     img {
         height: 35px;
-        margin-right: 1rem;
+        margin: 0 1rem;
         border-radius: 50%;
     }
 
